--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li><p id="minutes"></p><span>minutes</span></li>
                 <li><p id="seconds"></p><span>seconds</span></li>
             </ul>
-            <a href="​https://docs.google.com/forms/d/11cQYiuWfGT_0UOobZxyU5RHhmbDC_LXkLJlZ1NocYgM/edit" target="_blank" class="cta_button">Take A Survey</a>
+            <a href="https://docs.google.com/forms/d/11cQYiuWfGT_0UOobZxyU5RHhmbDC_LXkLJlZ1NocYgM/edit" target="_blank" class="cta_button">Take A Survey</a>
         </div>
     </div>
 
