--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h1>Welcome to PyCon Balkan!</h1>
                 <p>PyCon Balkan is an annual event that is being held in various countries in the Balkan region since 2018.</p>
                 <p>Key aim of PyCon Balkan is to connect the region and provide a real-time meeting opportunity for developers and companies from this region and internationally.</p>
+                <p>We are currently working on our official website, so this is just a temporary webpage. If anyone is interested to help us with the website, please contact us on volunteer@pyconbalkan.com. We would appreciate your help.:)</p>
             </div>
         </div>
     </div>
