--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:url"                content="http://conference.pyconbalkan.com/" />
+    <meta property="og:url"                content="http://conference.pyconbalkan.com/images/logo-pycon-balkan.svg" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="PyCon Balkan 2019" />
     <meta property="og:description"        content="PyCon Balkan is an annual event that is being held in various countries in the Balkan region since 2018" />
-    <meta property="og:image"              content="../conference_splash/images/logo-pycon-balkan.svg" />
+    <meta property="og:image"              content="http://conference.pyconbalkan.com/images/logo-pycon-balkan.svg" />
     <title>PyCon Balkan 2019</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500" rel="stylesheet">
