meta properties added - test 4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:url"                content="http://conference.pyconbalkan.com/images/logo-pycon-balkan.svg" />
+    <meta property="og:url"                content="http://conference.pyconbalkan.com" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="PyCon Balkan 2019" />
     <meta property="og:description"        content="PyCon Balkan is an annual event that is being held in various countries in the Balkan region since 2018" />
