Add python/django logo

--- a/index.html
+++ b/index.html
@@ -64,8 +64,14 @@
 
             <a href="mailto:sponsor@pyconbalkan.com" target="_blank" class="cta_button">Sponsor</a>
         </div>
+
     </div>
-    
+
+    <!--<hr class="proba">-->
+    <div class="row-logo">
+        <a href="https://www.djangoproject.com/foundation/" target="_blank"><img src="images/django-logo.svg" alt="django"></a>
+        <a href="https://www.python.org/psf/" target="_blank"><img src="images/python-logo.svg" alt="python"></a>
+    </div>
     <footer>
         <a href="https://www.facebook.com/pyconblkn/" target="_blank" class="facebook"></a>
         <a href="https://www.instagram.com/pycon.blkn/" target="_blank" class="instagram"></a>
