cleanup and js fix

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 
     </div>
 
-    <!--<hr class="proba">-->
     <div class="row-logo">
         <a href="https://www.djangoproject.com/foundation/" target="_blank"><img src="images/django-logo.svg" alt="django"></a>
         <a href="https://www.python.org/psf/" target="_blank"><img src="images/python-logo.svg" alt="python"></a>
@@ -82,29 +81,29 @@
 
 
 
-    <script>
-        var deadline = new Date("dec 31, 2018 12:00:00").getTime(); 
+    <!--<script>-->
+        <!--var deadline = new Date("dec 31, 2018 12:00:00").getTime(); -->
 
-        var x = setInterval(function() {
+        <!--var x = setInterval(function() {-->
 
-        var now = new Date().getTime(); 
-        var t = deadline - now; 
-        var days = Math.floor(t / (1000 * 60 * 60 * 24)); 
-        var hours = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60)); 
-        var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60)); 
-        var seconds = Math.floor((t % (1000 * 60)) / 1000); 
-        document.getElementById("days").innerHTML =days ; 
-        document.getElementById("hours").innerHTML =hours; 
-        document.getElementById("minutes").innerHTML = minutes; 
-        document.getElementById("seconds").innerHTML =seconds; 
-        if (t < 0) { 
-                clearInterval(x); 
-                document.getElementById("demo").innerHTML = "TIME UP"; 
-                document.getElementById("days").innerHTML ='0'; 
-                document.getElementById("hours").innerHTML ='0'; 
-                document.getElementById("minutes").innerHTML ='0' ; 
-                document.getElementById("seconds").innerHTML = '0'; } 
-        }, 1000); 
-    </script>
+        <!--var now = new Date().getTime(); -->
+        <!--var t = deadline - now; -->
+        <!--var days = Math.floor(t / (1000 * 60 * 60 * 24)); -->
+        <!--var houxrs = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60));-->
+        <!--var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60)); -->
+        <!--var seconds = Math.floor((t % (1000 * 60)) / 1000); -->
+        <!--document.getElementById("days").innerHTML =days ; -->
+        <!--document.getElementById("hours").innerHTML =hours; -->
+        <!--document.getElementById("minutes").innerHTML = minutes; -->
+        <!--document.getElementById("seconds").innerHTML =seconds; -->
+        <!--if (t < 0) { -->
+                <!--clearInterval(x); -->
+                <!--document.getElementById("demo").innerHTML = "TIME UP"; -->
+                <!--document.getElementById("days").innerHTML ='0'; -->
+                <!--document.getElementById("hours").innerHTML ='0'; -->
+                <!--document.getElementById("minutes").innerHTML ='0' ; -->
+                <!--document.getElementById("seconds").innerHTML = '0'; } -->
+        <!--}, 1000); -->
+    <!--</script>-->
 </body>
 </html>
