Update logo as background img

--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
         <div class="column">
             <p>PyCon Balkan gratefully acknowledges the support of our sponsors, without which the conference could not go ahead.</p>
             <p>For PyCon Balkan 2019 we are still in the process of creating a nice brochure. Until that’s available, if you are interested in sponsoring PyCon Balkan 2019, please contact us and we will provide you with all the information you need.</p>
-
             <a href="mailto:sponsor@pyconbalkan.com" target="_blank" class="cta_button">Sponsor</a>
         </div>
 
     </div>
 
     <div class="row-logo">
-        <a href="https://www.djangoproject.com/foundation/" target="_blank"><img src="images/django-logo.svg" alt="django"></a>
-        <a href="https://www.python.org/psf/" target="_blank"><img src="images/python-logo.svg" alt="python"></a>
+        <a class="link-logo" href="https://www.djangoproject.com/foundation/" target="_blank" title="Django Project Foundation"></a>
+        <a class="link-logo" href="https://www.python.org/psf/" target="_blank" title="Python Software Foundation"></a>
     </div>
     <footer>
         <a href="https://www.facebook.com/pyconblkn/" target="_blank" class="facebook"></a>
