new version of website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             The key aim of PyCon Balkan is to connect the region and provide a real-time meeting opportunity for developers and companies from the region and internationally. We thrive on helping the growth of the diverse Python community in the Balkans, promoting Python programming language, and becoming a place where you can learn new things and improve yourself professionally.
                 
         </p>
-        <a href="https://pyconbalkan2019.eventbrite.com" class="button">Register Now!</a>
+        <div class="buttonWrapper">
+            <a href="https://pyconbalkan2019.eventbrite.com" class="button">Register Now!</a>
+            <a href="https://www.pyconbalkan.com" class="button">Find Out More</a>
+        </div>
     </section>
 
     <section>
@@ -75,7 +78,10 @@
                 <img class='labnol' src='https://instagram.fbeg7-1.fna.fbcdn.net/vp/602c7be7520e4c7483baa8efe1219e82/5D37868C/t51.2885-15/e35/43289288_335822760548789_3406810400806215588_n.jpg?_nc_ht=instagram.fbeg7-1.fna.fbcdn.net' />
             </div>
         </div>
-        <a href="https://pyconbalkan2019.eventbrite.com" class="button">Join Us!</a>
+        <div class="buttonWrapper">
+            <a href="https://pyconbalkan2019.eventbrite.com" class="button">Join Us!</a>
+            <a href="https://www.pyconbalkan.com" class="button">Visit Our Website</a>
+        </div>
     </section>
 
     <footer>
